# CodeMountain

./: .gitignore  Installation.md  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: rust.yml  sandbox_test.yml  server_api_test.yml
dockerfiles/judgeserver/: Dockerfile
sandbox/: .gitignore  CMakeLists.txt  Cargo.toml  argparse.hpp  build.py  compile.cpp  compile.hpp  config.hpp  killer.cpp  killer.hpp  log.cpp  log.hpp  main.c  main.cpp  result.hpp  run.c  run.cpp  run.h  run.hpp  runtime.cpp  runtime.hpp  seccomp_rules.cpp  seccomp_rules.hpp  signal.cpp  signal.hpp  utils.cpp  utils.hpp
sandbox/client/: Cargo.toml
sandbox/client/src/: lib.rs
sandbox/client/src/sandboxclient/: mod.rs
sandbox/client/src/sandboxconfig/: mod.rs
sandbox/client/src/utils/: mod.rs
sandbox/client/tests/: sandbox_test.rs  struct_test.rs  tests.rs
sandbox/rust-binding/: .gitignore  Cargo.toml
sandbox/rust-binding/src/: lib.rs
sandbox/rust-binding/src/sandbox/: mod.rs
sandbox/rust-binding/tests/: sandbox_test.rs  struct_test.rs
sandbox/src/: lib.rs
sandbox/src/internal/: child_process.rs  file.rs  mod.rs  parent_process.rs  runner.rs  seccomp_rules.rs  signal.rs
sandbox/testprograms/: execve.c  fs.c  program.py  rm.c
sandbox/testprograms/execve/: execve.c
sandbox/testprograms/fs/: fs.c  output.txt
sandbox/testprograms/io/: program.c
sandbox/testprograms/python-helloworld/: program.py
sandbox/testprograms/python-input/: expected_output.txt  input.txt  program.py
sandbox/testprograms/python-requests/: program.py
sandbox/testprograms/reverse-shell/: howto.md  program.py
sandbox/testprograms/rm/: rm.c
sandbox/testprograms/segfault/: segfault.c
server/api/: .dockerignore  .gitignore  Cargo.toml  config.toml  docker-compose.dev.yml  docker-compose.test.yml  dockerfile.dev  dockerfile.test
server/api/docker-helpers/dev/: init.sql  wait-for-postgres.sh
server/api/docker-helpers/test/: init.sql  insert_test_data.sql  prepare-test-env.sh  wait-for-postgres.sh
server/api/email_templates/: password_reset.html
server/api/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
server/api/migrations/2021-05-29-072403_initial_db/: down.sql  up.sql
server/api/migrations/2021-09-10-094544_add_user_table/: down.sql  up.sql
server/api/src/: common.rs  config.rs  env.rs  errors.rs  image_validation.rs  mailer.rs  main.rs  redis.rs
server/api/src/db/: mod.rs  schema.rs
server/api/src/db/user/: mod.rs  model.rs  mutation.rs  query.rs
server/api/src/db/users/: mod.rs  models.rs  mutations.rs  query.rs
server/api/src/endpoints/: mod.rs
server/api/src/endpoints/auth/: authstatus.rs  login.rs  mod.rs  payload.rs  recovery.rs  refresh_accesstoken.rs  register.rs
server/api/src/endpoints/user/: avatar_update.rs  data_query.rs  data_update.rs  edit_firstname.rs  edit_lastname.rs  mod.rs  payload.rs
server/api/src/env/: mod.rs
server/api/src/errors/: mod.rs
server/api/src/extractors/: auth.rs
server/api/src/guards/: auth.rs  mod.rs  require_auth.rs
server/api/src/jwt/: accesstoken.rs  claims.rs  mod.rs  password_reset_token.rs  refreshtoken.rs  sign.rs  verify.rs
server/api/src/services/: health.rs  init.rs  mod.rs
server/api/src/services/auth/: login.rs  mod.rs  password_reset.rs  refresh_accesstoken.rs  register.rs
server/api/src/services/user/: mod.rs  query.rs  update.rs
server/api/src/tests/: mod.rs
server/api/src/tests/auth/: authstatus.rs  login.rs  mod.rs  recovery.rs  refresh_accesstoken.rs  register.rs
server/api/src/tests/user/: edit_email.rs  edit_firstname.rs  edit_lastname.rs  edit_password.rs  get_user_by_id.rs  get_user_by_username.rs  mod.rs
server/judge/: Cargo.toml  run.py
server/judge/src/: main.rs
system/: CodeMountain.JudgingSystem.excalidraw
