[package]
name = "api"
version = "0.1.0"
authors = ["The CodeMountain Developers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
incremental = true

[profile.release]
incremental = true
lto = true

[dependencies]
actix-web = "3"
config = "0.11"
lazy_static = "1.4.0"
serde = "1.0.130"
log = "0.4.14"
env_logger = "0.9.0"