[package]
name = "api"
version = "0.1.0"
authors = ["The CodeMountain Developers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
incremental = true

[profile.release]
incremental = true
lto = true

[dependencies]
actix-web = "3"
config = "0.11"
lazy_static = "1.4.0"
log = "0.4.14"
env_logger = "0.9.0"
diesel = { version = "1.4.5", features = ["postgres", "chrono", "r2d2", "uuidv07"] }
r2d2 = "0.8.9"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }
derive_more = "0.99.0"
