[package]
name = "codemountain_judgeserver"
version = "0.1.0"
authors = ["mdgaziur <mdgaziurrahmannoor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = "0.4.0"
sandbox = { path = "../../sandbox/rust-binding" }